--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title>Javascript Drumkit</title>
+
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+<div id='drum-machine'>
 
   <div class="keys">
     <div data-key="65" class="key">
@@ -47,6 +53,8 @@
     </div>
   </div>
 
+</div>
+
   <audio data-key="65" src="sounds/clap.wav"></audio>
   <audio data-key="83" src="sounds/hihat.wav"></audio>
   <audio data-key="68" src="sounds/kick.wav"></audio>
@@ -68,16 +76,13 @@ function playSound(event) {
     key.classList.add('playing'); 
 }
 
-
 function removeTransition(event) {
   if (event.propertyName !== 'transform') return; // skip it if it's not a transform
   this.classList.remove('playing');
   }
 
 const keys = document.querySelectorAll('.key');
-
 keys.forEach(key => key.addEventListener('transitionend', removeTransition));
-
 window.addEventListener('keydown', playSound) 
 
 </script>
