adding touch event listener

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@ function removeTransition(event) {
 const keys = document.querySelectorAll('.key');
 keys.forEach(key => key.addEventListener('transitionend', removeTransition));
 window.addEventListener('keydown', playSound) 
+window.addEventListener('click', playSound);
 </script>
 
 
