--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 <div id='drum-machine'>
 
   <div class="keys">
-    <div data-key="65" class="key">
+    <a href="#"><div data-key="65" class="key">
       <kbd>A</kbd>
       <span class="sound">clap</span>
-    </div>
+    </div></a>
     <div data-key="83" class="key">
       <kbd>S</kbd>
       <span class="sound">hihat</span>
@@ -90,7 +90,7 @@ function removeTransition(event) {
 const keys = document.querySelectorAll('.key');
 keys.forEach(key => key.addEventListener('transitionend', removeTransition));
 window.addEventListener('keydown', playSound) 
-window.addEventListener('click', playSound);
+
 </script>
 
 
