--- a/index.html
+++ b/index.html
@@ -70,29 +70,7 @@
   <audio data-key="75" src="sounds/tom.wav"></audio>
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
-<script>
-function playSound(event) {
-    const audio = document.querySelector(`audio[data-key="${event.keyCode}"]`);
-    const key = document.querySelector(`.key[data-key="${event.keyCode}"`);
-    console.log("Audio: ", audio);
-
-    if(!audio) return //stop the function from running all together   
-    audio.currentTime=0; //rewind to the start    
-    audio.play();
-    key.classList.add('playing'); 
-}
-
-function removeTransition(event) {
-  if (event.propertyName !== 'transform') return; // skip it if it's not a transform
-  this.classList.remove('playing');
-  }
-
-const keys = document.querySelectorAll('.key');
-keys.forEach(key => key.addEventListener('transitionend', removeTransition));
-window.addEventListener('keydown', playSound) 
-
-</script>
-
+<script src="js/drum.js"></script>
 
 </body>
 </html>
