--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Javascript Drum Machine</title>
+  <title>JS DM Rev2</title>
 
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <script src="https://cdn.jsdelivr.net/npm/webmidi"></script>
 </head>
 <body>
 
-<span><h1>Vanilla Javascript Drum Machine</h1></span>
-<span><h2>Use keys on keyboard to trigger Rhythm Ace samples</h2></span>
+<span><h1>Drum Machine with WebMIDI</h1></span>
+<span><h2>Use keys on keyboard or MIDI controller to trigger Rhythm Ace samples</h2></span>
 
 
 <div id='drum-machine'>
