--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
 <body>
 
 <span><h1>Drum Machine with WebMIDI</h1></span>
-<span><h2>Use keys on keyboard or MIDI controller to trigger Rhythm Ace samples</h2></span>
-
 
 <div id='drum-machine'>
 
@@ -56,6 +54,44 @@
       <kbd>L</kbd>
       <span class="sound">tink</span>
     </div>
+
+    <div data-key="76" class="key">
+      <kbd>L</kbd>
+      <span class="sound">tink</span>
+    </div>
+
+    <div data-key="76" class="key">
+      <kbd>L</kbd>
+      <span class="sound">tink</span>
+    </div>
+
+    <div data-key="76" class="key">
+      <kbd>L</kbd>
+      <span class="sound">tink</span>
+    </div>
+
+
+    <div data-key="76" class="key">
+      <kbd>L</kbd>
+      <span class="sound">tink</span>
+    </div>
+
+    <div data-key="76" class="key">
+      <kbd>L</kbd>
+      <span class="sound">tink</span>
+    </div>
+
+    <div data-key="76" class="key">
+      <kbd>L</kbd>
+      <span class="sound">tink</span>
+    </div>
+
+    <div data-key="76" class="key">
+      <kbd>L</kbd>
+      <span class="sound">tink</span>
+    </div>
+
+
   </div>
 
 </div>
