--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <div class="keys">
      <!-- top row, L to R -->
-    <a href="#"><div data-key="90" midi-val="48" class="key">
+    <div data-key="90" midi-val="48" class="key">
       <kbd>Z</kbd>
       <span class="sound">noise</span>
     </div></a>
