--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div data-key="90" midi-val="48" class="key">
       <kbd>Z</kbd>
       <span class="sound">noise</span>
-    </div></a>
+    </div>
     <div data-key="79" midi-val="49" class="key">
       <kbd>O</kbd>
       <span class="sound">conga</span>
